Removed daily logs link

--- a/themes/0x32/layouts/partials/nav.html
+++ b/themes/0x32/layouts/partials/nav.html
@@ -6,13 +6,13 @@
   <a href="/">~/Home</a>
   {{ end }}
   <!--.-->
-<!--   {{ if eq $current_url "/work/" }}
+  <!--   {{ if eq $current_url "/work/" }}
   <a class="active" href="/work/">~/Work</a>
   {{ else }}
   <a href="/work/">~/Work</a>
   {{ end }} -->
   <!---->
-<!--   {{ if eq $current_url "/about/" }}
+  <!--   {{ if eq $current_url "/about/" }}
   <a class="active" href="/about/">~/About</a>
   {{ else }}
   <a href="/about/">~/About</a>
@@ -31,12 +31,11 @@
   {{ end }}
   <!--.-->
 
-
-  {{ if eq $current_url "/daily-logs/" }}
+  <!-- {{ if eq $current_url "/daily-logs/" }}
   <a class="active" href="https://g-savitha.github.io/Logs/">~/Daily Logs</a>
   {{ else }}
   <a href="https://g-savitha.github.io/Logs/">~/Daily Logs</a>
-  {{ end }}
+  {{ end }} -->
   <!--.-->
   <!--.-->
 </small>
